fix birthdate layout on safari

--- a/static/css/registerForm.css
+++ b/static/css/registerForm.css
@@ -38,7 +38,7 @@
     box-shadow: none;
 }
 
-select {
+select, input {
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
